# gguf-chisel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: in-place-patching.md
examples/: README.md  fix-metadata.sh  patch.json  system-default.jinja
scripts/: smoke.sh
src/: cli.rs  dump.rs  json.rs  lib.rs  main.rs  patch.rs  reader.rs  template.rs  types.rs  verify.rs  writer.rs
tests/: cli.rs
